Ajout du scanBackGround

--- a/templates/step1.twig
+++ b/templates/step1.twig
@@ -20,40 +20,39 @@
 		<div class="container container-fluid">
 
 			<div class="row">
-			<h1>Open Centreon Discovery</h1>
-			<svg width="50" height="50" viewbox="0 0 16 16" class="bi bi-hdd-network" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+				<h1>Open Centreon Discovery</h1>
+				<svg width="50" height="50" viewbox="0 0 16 16" class="bi bi-hdd-network" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 					<path fill-rule="evenodd" d="M14 3H2a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM2 2a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
 					<path d="M5 4.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-2 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
 					<path fill-rule="evenodd" d="M7.5 10V7h1v3a1.5 1.5 0 0 1 1.5 1.5h5.5a.5.5 0 0 1 0 1H10A1.5 1.5 0 0 1 8.5 14h-1A1.5 1.5 0 0 1 6 12.5H.5a.5.5 0 0 1 0-1H6A1.5 1.5 0 0 1 7.5 10zm0 1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z"/>
 				</svg>
-				
+
 			</div>
 
 			<div class="row">
-			
-				
+
+
 				<table class="table table-striped" id="tableau">
 					<thead>
 
 						<tr>
 							<th><input type="checkbox" value="" id="selectAll"></th>
-							<th>
-								<label for='selectAll'>Serveur</label>
-							</th>
+							<th>Serveur</th>
 							<th>Os</th>
 							<th>ip</th>
-							<th>Template Host
+							<th>
 								<select class="custom-select" id="selectTpl">
-									<option selected></option>
+									<option selected>Choisir un tpl</option>
 									{% for templates in template  %}
 										<option>{{ templates }}</option>
 									{% endfor %}
 								</select>
 							</th>
-							<th>Template APPS1</th>
-							<th>Template APPS2</th>
-							<th>Poller</th>
+							<th>Tpl 1</th>
+							<th>Tpl 2</th>
+							<th "col-lg-3" >Poller</th>
 						</tr>
+						<tr></tr>
 					</thead>
 					<tbody>
 
@@ -65,7 +64,8 @@
 						{% endif %}
 
 						{% for Hosts in hotes %}
-
+							
+							
 							<tr>
 								<td>
 									<div class="form-check">
@@ -77,8 +77,16 @@
 										{{ Hosts.getHostName }}
 									</label>
 								</td>
-								<td>{{ Hosts.getOs }}</td>
-								<td>{{ Hosts.getIp }}</td>
+								<td>
+									<label class="form-check-label" for="{{ Hosts.getIp }}">
+										{{ Hosts.getOs }}
+									</label>
+								</td>
+								<td>
+									<label class="form-check-label" for="{{ Hosts.getIp }}">
+										{{ Hosts.getIp }}
+									</label>
+								</td>
 								<td>
 
 									<select class="custom-select hardTpl">
@@ -114,8 +122,8 @@
 									</select>
 								</td>
 
-								<td style="display:none">{{ community }}</td>
-								<td style="display:none">{{ versionSnmp}}</td>
+								<td style="display:none">{{ Hosts.community }}</td>
+								<td style="display:none">{{ Hosts.snmpVersion }}</td>
 
 							</tr>
 
