--- a/templates/step1.twig
+++ b/templates/step1.twig
@@ -7,10 +7,12 @@
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/mutlipleselection.js"></script>
 		<script src="js/autoTemplate.js"></script>
-
-		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+		<script src="js/popper.min.js"></script>
+		<script src="js/tooltip.js"></script>
+		
 
 		<link href="css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+		
 		<script src="js/bootstrap.min.js"></script>
 		<!-- Custom styles for this template -->
 		<title>Resulat du scan</title>
@@ -38,11 +40,11 @@
 
 						<tr>
 						
-							<th><input type="checkbox" value="" id="selectAll"></th>
-							<th>Serveur</th>
-							<th>Os</th>
-							<th>ip</th>
-							<th>
+							<th class="text-center"><input type="checkbox" value="" id="selectAll"></th>
+							<th class="text-center">Serveur</th>
+							<th class="text-center">Os</th>
+							<th class="text-center">ip</th>
+							<th class="text-center">
 								<!-- <select class="custom-select" id="selectTpl">
 									<option selected>Choisir un tpl</option>
 									{# for templates in template  %}
@@ -50,11 +52,11 @@
 									{% endfor #}
 								</select>
 								-->
-								<button type="button" class="btn btn-primary" onclick="autoTemplate()">Magie!</button>
+								<button type="button" class="btn btn-primary" onclick="autoTemplate()" data-toggle="tooltip" data-placement="left" title="Permet d'appliquer automatiquement un template en fonction de l'OS détecté">Magie!</button>
 							</th>
-							<th>Tpl 1</th>
-							<th>Tpl 2</th>
-							<th "col-lg-3" >Poller</th>
+							<th class="text-center">Tpl 1</th>
+							<th class="text-center">Tpl 2</th>
+							<th class="text-center" >Poller</th>
 						</tr>
 						<tr></tr>
 					</thead>
@@ -72,7 +74,7 @@
 							
 							<tr>
 								<td>
-									<div class="form-check">
+									<div class="form-check"  data-toggle="tooltip" data-placement="top" title="Selectionner les machines à inserer dans Centreon">
 										<input class="form-check-input" type="checkbox" value="" id="{{ Hosts.getIp }}" name="checkBox">
 									</div>
 								</td>
@@ -119,7 +121,7 @@
 									</select>
 								</td>
 								<td>
-									<select class="custom-select">
+									<select class="custom-select" data-show-subtext="true" data-live-search="true" >
 										{% for poller in pollers %}
 											<option selected>{{poller}}</option>
 										{% endfor %}
