--- a/templates/step1.twig
+++ b/templates/step1.twig
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="css/bootstrap.css">
+		 <link rel="stylesheet" href="css/bootstrap.css"> 
+		
 		<script src="js/bootstrap.js"></script>
 		<script src="js/sendData.js"></script>
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/mutlipleselection.js"></script>
 		<script src="js/autoTemplate.js"></script>
-		<script src="js/popper.min.js"></script>
+		 <script src="js/popper.min.js"></script> 
 		<script src="js/tooltip.js"></script>
 		
 
 		<link href="css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 		
 		<script src="js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="css/bootstrap-select.min.css">
+	<script src="js/bootstrap-select.min.js"></script>
+	
+		
 		<!-- Custom styles for this template -->
+		 
 		<title>Resulat du scan</title>
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,10 +38,10 @@
 
 			</div>
 
-			<div class="row">
+			<div class="row no-border">
 
 
-				<table class="table table-striped" id="tableau">
+				<table class="table table-striped table-condensed" id="tableau">
 					<thead>
 
 						<tr>
@@ -44,14 +50,8 @@
 							<th class="text-center">Serveur</th>
 							<th class="text-center">Os</th>
 							<th class="text-center">ip</th>
+							<th class="text-center">Services</th>
 							<th class="text-center">
-								<!-- <select class="custom-select" id="selectTpl">
-									<option selected>Choisir un tpl</option>
-									{# for templates in template  %}
-										<option>{{ templates }}</option>
-									{% endfor #}
-								</select>
-								-->
 								<button type="button" class="btn btn-primary" onclick="autoTemplate()" data-toggle="tooltip" data-placement="left" title="Permet d'appliquer automatiquement un template en fonction de l'OS détecté">Magie!</button>
 							</th>
 							<th class="text-center">Tpl 1</th>
@@ -80,7 +80,7 @@
 								</td>
 								<td>
 									<label class="form-check-label" for="{{ Hosts.getIp }}">
-										{{ Hosts.getHostName }}
+										{{ Hosts.getHostName }} 
 									</label>
 								</td>
 								<td>
@@ -91,11 +91,28 @@
 								<td>
 									<label class="form-check-label" for="{{ Hosts.getIp }}">
 										{{ Hosts.getIp }}
+										
 									</label>
 								</td>
 								<td>
+								{% if Hosts.getServices is not empty  %}
+									
+										<a href="#"	data-toggle="tooltip" data-placement="left" data-html="true" title="
+											
+											{% for services in Hosts.getServices %}
+															<li	 class='list-group-item list-group-item-dark' >{{services}}</li>					
+											{% endfor %}
+											">
+									 
+											<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="black" class="bi bi-gear-fill" viewBox="0 0 16 16">
+  												<path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+											</svg>
+											 </a>
+										{% endif %}
+								</td>
+								<td>
 
-									<select class="custom-select hardTpl">
+									<select class="selectpicker" data-live-search="true" title="Choisir" data-width="200px">
 										<option selected></option>
 										{% for templates in template  %}
 											<option>{{ templates }}</option>
@@ -104,7 +121,7 @@
 								</td>
 
 								<td> 
-									<select class="custom-select">
+									<select class="selectpicker" data-live-search="true" title="Choisir" data-width="100px">
 										<option selected></option>
 										{% for templates in template  %}
 											<option>{{ templates }}</option>
@@ -113,7 +130,7 @@
 								</td>
 
 								<td>
-									<select class="custom-select">
+									<select class="selectpicker" data-live-search="true" title="Choisir" data-width="100px" >
 										<option selected></option>
 										{% for templates in template  %}
 											<option>{{ templates }}</option>
@@ -121,7 +138,7 @@
 									</select>
 								</td>
 								<td>
-									<select class="custom-select" data-show-subtext="true" data-live-search="true" >
+									<select class="selectpicker" data-show-subtext="true" data-live-search="true" data-width="100px" >
 										{% for poller in pollers %}
 											<option selected>{{poller}}</option>
 										{% endfor %}
