Bug sur impôrt SNMP version

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -56,7 +56,7 @@
 						<select class="custom-select" id="inputGroupSelect01" name="version">
 
 							<option value="1">1</option>
-							<option selected value="2">2c</option>
+							<option selected value="2c">2c</option>
 
 						</select>
 
