--- a/templates/step1.twig
+++ b/templates/step1.twig
@@ -21,7 +21,7 @@
 		
 		<!-- Custom styles for this template -->
 		 
-		<title>Resulat du scan</title>
+		<title>Resultat du scan</title>
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	</head>
