--- a/templates/index.twig
+++ b/templates/index.twig
@@ -119,8 +119,8 @@
 		{% endif %}
 
 		{% if file == false %}
-		<p class="font-weight-bold">Le cron n'a pas encore lancer de tache<br>
-			le proprietaire du fichier resulScan doit être apache
+		<p class="font-weight-bold">Le cron n'a pas encore lancé de tache<br>
+			le proprietaire du fichier resultScan doit être apache
 			<br>
 			Veuillez patienter ...
 		</p>
